# luizalabs

./: .env.example  .gitignore  Makefile  README.md  __init__.py  egg.sh  pyproject.toml  settings.toml
app/: __init__.py
app/blueprints/api/: __init__.py
app/blueprints/auth/: __init__.py  models.py  resources.py
app/blueprints/customers/: models.py  resources.py
app/blueprints/products/: __init__.py  models.py  resources.py
app/extensions/: api.py  auth.py  commands.py  configuration.py  database.py  logging.py  mixer.py  rest.py
app/extensions/api/: __init__.py  pagination.py
tests/: test_paginate.py
